Correction collapse + details (tag) - collapse (pb équipements) pb gap collapse et débordement - reste à faire host et carrousel

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -2,22 +2,26 @@
 
 $coll-content: #fafafa;
 
-.collapse {
-  padding: 7px 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 24px;
-  font-weight: 700;
-  background-color: $main-color;
-  color: white;
+.contain {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 5px;
-  margin-top: 30px;
+  flex-direction: column;
+  &__collapse {
+    padding: 7px 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 24px;
+    font-weight: 700;
+    background-color: $main-color;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
 }
 
 .collapse i {
