--- a/src/pages/detailRental/details.scss
+++ b/src/pages/detailRental/details.scss
@@ -1,20 +1,45 @@
 @use '../../assets/_main' as *;
 
 .carrousel {
-  height: 44vh;
+  height: 45vh;
+}
+
+.rental {
+  display: flex;
+  flex-direction: column;
 }
 
 .detail {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   &__tit-loc-tag {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
+    gap: 10px;
     &__title {
       color: $main-color;
       font-size: 36px;
     }
+    &__loc {
+      font-size: 18px;
+    }
+    &__tag {
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      margin: 25px 0 25px 0;
+    }
   }
+}
+
+.collapse-zone {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 30px;
+    gap: 30px;
+    width: 100%;
 }
